# qkc-planck-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
enneract-brain/: .gitignore  README.md  pyproject.toml  requirements.txt
enneract-brain/src/enneract_brain/: __init__.py  brain.py  field.py  planck_interface.py  visualize.py
enneract-brain/tests/: test_brain.py
lattice-sim/: index.html  package-lock.json  package.json
lattice-sim/src/: App.css  App.jsx
lattice-sim/src/api/: claude.js
lattice-sim/src/components/: LatticeCanvas.jsx  LycanRunner.jsx  Panels.jsx
lattice-sim/src/hooks/: useSimulation.js
lattice-sim/src/sim/: bayesian.js  lattice.js  lycan.js  stego.js  (+1 more)
notebooks/: 01_data_loading.ipynb  02_spot_analysis.ipynb  03_statistics.ipynb
qkc_governance/: __init__.py  cli.py  config.py  governance.py  lifecycle.py  lycan.py
qkc_governance/agents/: __init__.py  analyst.py  base.py  guard.py  hunter.py  scout.py  stego.py  striker.py
qkc_governance/api/: __init__.py  app.py  auth.py
qkc_governance/audit/: __init__.py  chain.py
qkc_governance/classify/: __init__.py  bayes.py  claude_api.py  entropy.py  monte_carlo.py
qkc_governance/consensus/: __init__.py  graph.py  propagation.py  protocol.py
qkc_governance/containment/: __init__.py  adapter.py
qkc_governance/features/: __init__.py  context.py  extractor.py
qkc_governance/policy/: __init__.py  engine.py
qkc_governance/threats/: __init__.py  models.py  registry.py
src/qkc/: __init__.py  circuit_highway.py  load.py  plot.py  spiral.py  spot.py  stats.py
tests/: test_brain.py  test_circuit_highway.py  test_nav.py  test_nav_adversarial.py  test_spot.py  test_stats.py
tests_gov/: test_adversarial.py  test_bayes.py  test_consensus.py  test_context.py  test_entropy.py  test_governance.py  test_lifecycle.py
(+7 files in other folders)
