[project]
name = "qkc-governance"
version = "1.0.0"
description = "Multi-agent AI governance and threat response platform"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
qkc-gov = "qkc_governance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qkc_governance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests_gov", "tests"]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
