[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enneract-brain"
version = "0.1.0"
description = "9D Hypercube Neural Intelligence System — 512 neurons, 2304 synapses, 10 cognitive shells"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["AI", "neural-network", "hypercube", "enneract", "cognitive-architecture"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
